--- a/index.html
+++ b/index.html
@@ -4,21 +4,97 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PalMyst Agent</title>
+        <!-- Link to Google Fonts for a more mystical font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+
     <style>
-        body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; max-width: 600px; margin: 40px auto; padding: 20px; background-color: #f4f7f6; color: #333; }
-        h1 { color: #2c3e50; text-align: center; }
-        .card { background-color: #ffffff; padding: 20px; border-radius: 8px; margin-bottom: 20px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
-        label { font-weight: bold; display: block; margin-bottom: 10px; }
-        input[type="text"], input[type="tel"], select, input[type="file"] { width: 95%; padding: 10px; border-radius: 4px; border: 1px solid #ccc; margin-bottom: 10px; }
-        button { display: block; width: 100%; padding: 12px; background-color: #3498db; color: white; border: none; border-radius: 4px; font-size: 16px; cursor: pointer; margin-top: 20px; transition: background-color 0.3s; }
-        button:hover:not(:disabled) { background-color: #2980b9; }
-        button:disabled { background-color: #a9a9a9; cursor: not-allowed; }
-        #instructions, #result, #loader { margin-top: 20px; padding: 15px; border-radius: 4px; }
-        #instructions { background-color: #eafdfc; border: 1px solid #b2e0dd; }
-        #result { background-color: #fff3cd; border: 1px solid #ffeeba; white-space: pre-wrap; }
+        body {
+            font-family: 'Roboto', sans-serif;
+            font-weight: 300;
+            max-width: 600px;
+            margin: 40px auto;
+            padding: 20px;
+            background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
+            color: #e0e0e0;
+        }
+
+        h1 {
+            font-family: 'Cinzel', serif;
+            color: #ffffff;
+            text-align: center;
+            font-weight: 700;
+            letter-spacing: 2px;
+            text-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
+            margin-bottom: 40px;
+        }
+
+        .card {
+            background-color: rgba(255, 255, 255, 0.05);
+            padding: 25px;
+            border-radius: 15px;
+            margin-bottom: 20px;
+            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+            backdrop-filter: blur(5px);
+            -webkit-backdrop-filter: blur(5px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        label {
+            font-weight: 400;
+            display: block;
+            margin-bottom: 10px;
+            color: #cbbde2;
+        }
+
+        input[type="text"], input[type="tel"], select, input[type="file"] {
+            width: 95%;
+            padding: 12px;
+            border-radius: 8px;
+            border: 1px solid #5a5475;
+            background-color: #2c2744;
+            color: #ffffff;
+            margin-bottom: 10px;
+        }
+
+        button {
+            display: block;
+            width: 100%;
+            padding: 15px;
+            background: linear-gradient(90deg, #8e44ad, #9b59b6);
+            color: white;
+            border: none;
+            border-radius: 8px;
+            font-size: 16px;
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            cursor: pointer;
+            margin-top: 20px;
+            transition: all 0.3s ease;
+        }
+
+        button:hover:not(:disabled) {
+            background: linear-gradient(90deg, #9b59b6, #8e44ad);
+            box-shadow: 0 0 15px rgba(155, 89, 182, 0.6);
+        }
+
+        button:disabled {
+            background: #5a5475;
+            cursor: not-allowed;
+            opacity: 0.7;
+        }
+
+        #result {
+            background-color: rgba(255, 255, 255, 0.1);
+            border: 1px solid #cbbde2;
+            white-space: pre-wrap; /* Allows text to wrap nicely */
+        }
+
         .hidden { display: none; }
-        .ethical-note { font-size: 12px; color: #777; text-align: center; margin-top: 30px; }
-        #loader { text-align: center; }
+        .ethical-note { font-size: 12px; color: #aaa; text-align: center; margin-top: 30px; }
+        #loader { text-align: center; color: #cbbde2; }
     </style>
 </head>
 <body>
