--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <label for="name">Your Name:</label>
         <input type="text" id="name" placeholder="Enter your name">
         <label for="phone">Your Phone Number:</label>
-        <input type="tel" id="phone" placeholder="Enter your phone number">
+        <input type="tel" id="phone" placeholder="Enter 11-digit phone number" required pattern="[0-9]{11}" maxlength="11" title="Please enter exactly 11 digits.">
     </div>
 
     <div class="card">
