--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
     <div id="image-upload-section" class="card hidden">
         <label for="palm-image">2. Upload a clear picture of your palm</label>
-        <input type="file" id="palm-image" accept="image/*">
+        <input type="file" id="palm-image" accept="image/*" capture="user">
         <p style="font-size: 12px; color: #555;">We will analyze the image according to the instructions.</p>
     </div>
 
