--- a/index.html
+++ b/index.html
@@ -153,6 +153,13 @@
         <p id="result-text"></p>
     </div>
 
+    <!-- New Email Section -->
+    <div id="email-section" class="card hidden">
+        <label for="email-address">Enter your email to receive this reading:</label>
+        <input type="text" id="email-address" placeholder="your.email@example.com">
+        <button id="send-email-button">Send Email</button>
+    </div>
+
     <p class="ethical-note">
         This experience is intended for entertainment and self-reflection. The observations and interpretations do not constitute scientific or medical advice.
     </p>
